add new directory for dataInit file and fix comments

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=dev
+
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.data-locations=classpath:dataInit.sql
 spring.sql.init.mode=always
