--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.springdoc</groupId>
+			<groupId>org.springdoc</groupId>//
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.0.4</version>
 		</dependency>
