--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.servlet.multipart.max-request-size=10MB
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.data-locations=classpath:init/dataInit.sql
 spring.sql.init.mode=always
+
+#SMTP
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=rusi.studio.kgz@gmail.com
+spring.mail.password=gfakimyogkoqmpum
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
