--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ aws_bucket_name=tasktracker-b9
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.data-locations=classpath:init/dataInit.sql
+#spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.data-locations=classpath:init/dataInit.sql
 spring.sql.init.mode=always
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
