--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   backend:
     image: '#image'
-    container_name: task-tracker
+    container_name: taskTracker
     restart: always
     ports:
       - "80:2023"
