--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 parameters:
   docker-container:
     type: string
-    default: "taskTracker"
+    default: "tasktracker"
 
 jobs:
   install-docker-if-not-exists:
