--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+server.port=2023
+spring.datasource.url=${POSTGRES_DB}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
+
 aws_access_key=AKIARSLVBJVJ6R24OXIL
 aws_secret_key=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
 aws_bucket_path=https://tasktracker-b9.s3.eu-north-1.amazonaws.com/
@@ -6,6 +13,7 @@ aws_bucket_name=tasktracker-b9
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+spring.jwt.secret_key=tasktrackerb9
 
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
