--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,12 @@ spring.datasource.url=${POSTGRES_DB}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
+#JWT
+spring.jwt.secret_key=tasktrackerb9
+
+#S3 FILE
 aws_access_key=AKIARSLVBJVJ6R24OXIL
 aws_secret_key=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
 aws_bucket_path=https://tasktracker-b9.s3.eu-north-1.amazonaws.com/
@@ -13,17 +17,15 @@ aws_bucket_name=tasktracker-b9
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-spring.jwt.secret_key=tasktrackerb9
-
-spring.sql.init.mode=always
+#DATA-INIT
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.data-locations=classpath:init/dataInit.sql
+spring.sql.init.mode=never
+
+#SMTP
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=tasktrackerjava9@gmail.com
 spring.mail.password=ximtjuxgoqhebcpl
-
-#SMTP
-
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
