--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-#server.port=2023
-#spring.datasource.url=${POSTGRES_DB}
-#spring.datasource.username=${POSTGRES_USER}
-#spring.datasource.password=${POSTGRES_PASSWORD}
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=create
+server.port=2023
+spring.datasource.url=${POSTGRES_DB}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
 
 #JWT
 spring.jwt.secret_key=tasktrackerb9
