--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   backend:
-    image: '#image'
+    image: "#image"
     container_name: task-tracker
     restart: always
     ports:
