--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jwt.secret_key=tasktrackerb9
 #S3 FILE
 aws_access_key=AKIA3KYNRCVIHJIOPV4M
 aws_secret_key=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
-aws_bucket_path=https://tasktracker-b9.s3.eu-north-1.amazonaws.com/
+aws_bucket_path= https://tasktrackerb9.s3.eu-central-1.amazonaws.com/
 aws_region=eu-central-1
 aws_bucket_name=tasktrackerb9
 spring.servlet.multipart.max-file-size=10MB
