--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,11 @@ spring.mail.username=tasktrackerjava9@gmail.com
 spring.mail.password=ximtjuxgoqhebcpl
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#Migration
+spring.flyway.clean-disabled=false
+spring.flyway.enabled=false
+spring.flyway.locations=classpath:db.migration
+spring.flyway.baseline-on-migrate=false
+spring.main.allow-bean-definition-overriding=false
+spring.sql.init.schema-locations=classpath:db.migration/*
