--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
 			<version>2.0.4</version>
 		</dependency>
 		<dependency>
+			<groupId>io.logz.logback</groupId>
+			<artifactId>logzio-logback-appender</artifactId>
+			<version>v1.0.25</version>
+		</dependency>
+		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-api</artifactId>
 			<version>0.11.5</version>
