--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=${POSTGRES_DB}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 #JWT
 spring.jwt.secret_key=tasktrackerb9
@@ -20,7 +20,7 @@ spring.servlet.multipart.max-request-size=10MB
 #DATA-INIT
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.data-locations=classpath:init/dataInit.sql
-spring.sql.init.mode=never
+spring.sql.init.mode=always
 
 #SMTP
 spring.mail.host=smtp.gmail.com
